Attempt to reduce Travis verbosity